@@ -22,6 +22,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #14184: Increase the default stack size for secondary threads on
+  Mac OS X to avoid interpreter crashes when using threads on 10.7.
+
 - Issue #10543: Fix unittest test discovery with Jython bytecode files.
 
 - Issue #14252: Fix subprocess.Popen.terminate() to not raise an error under
